# acceleration

./: CMakeLists.txt  LICENSE  README.md  openacc_build.cmake
OpenACC/: CMakeLists.txt
src/: axpby_openacc.c  benchmark.py  benchmark_framework.py  finite_diff.c  finite_difference.pyx  parallel_algebra.c  parallel_algebra.py  setup.py.in  test_openacc.c
src/include/: finite_diff.h  parallel_algebra_acc.h
